# readwise-reader-sync

./: .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  cliff.toml  mise.toml
.github/workflows/: ci.yml  publish.yml  release.yml
.sqlx/: query-2f882ecf4be0bf50a35a7b0b1841abbe7fbde3436062f496f8e09054da74ac13.json  query-95596d5ac092f30c8c24282901f5a723309a319f617ba707093f07f5a7ef3214.json  query-bdc5937c8ce8590a38061e55413598b8e0aa479221181d7d3fd63c6d68fc977a.json
migrations/: 20240205220541_add_reading_table.sql  20240304213214_track_changes.sql  20260218000000_fix_word_count_and_progress.sql  20260218000001_fix_source_url_index.sql  20260219000000_add_sync_checkpoint.sql
scripts/: init_db.sh
src/: api.rs  db.rs  main.rs  models.rs
