[package]
name = "reader-sync"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.33", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.1"
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_path_to_error = "0.1.15"
sqlx = { version = "0.7.3", features = [
  "bigdecimal",
  "chrono",
  "json",
  "migrate",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
] }
tokio = { version = "1.36.0", features = ["macros"] }
ureq = { version = "2.9.4", features = ["gzip", "json", "tls"] }

[profile.dev]
debug = 0
panic = "abort"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev.package.sqlx-macros]
opt-level = 3
